# s3bids

./: README.md  pyproject.toml
.github/workflows/: release.yml
s3bids/s3bids/: s3bids.py
