[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "s3bids"
description = "Useful classes for downloading BIDS datasets from S3."
readme = "README.md"
requires-python = ">=3.8"
license = { text="BSD3" }
authors = [
  { name="NRDG", email="" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = []
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/36000/s3bids"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "s3bids/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["s3bids"]
